--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="RU">
     <head>
         <meta charset="utf-8">
-        <title>Document</title>
+        <title>Site</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>GIT урок2</h1>
