--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Site</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>GIT урок2</h1>
-        <p>новое изменение файла index.html</p>
+        <h1>site here</h1>
+        <p>some text</p>
+        <p>la la la</p>
     </body>
 </html>
